snapshots/syntax/library/functions/environment/getallsettings/getallsettings_debug_print.snap
---
source: vb6parse/src/syntax/library/functions/environment/getallsettings.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: Debug
        - kind: PeriodOperator
          text: "."
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Settings count: \""
        - kind: Whitespace
          text: " "
        - kind: Ampersand
          text: "&"
        - kind: Whitespace
          text: " "
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: UBound
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: GetAllSettings
        - kind: LeftParenthesis
          text: (
        - kind: Identifier
          text: appName
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: section
        - kind: RightParenthesis
          text: )
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "1"
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: " "
        - kind: AdditionOperator
          text: +
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "1"
        - kind: RightParenthesis
          text: )
